--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-dev": "npm run bootstrap && npm run dev"
+    "start-dev": "docsify serve ./docs"
   },
   "repository": {
     "type": "git",
